# afcenter25

./: .gitignore  hello.py  original.md  original_filter.md  pyproject.toml  report.qmd
afcenter25/: _publish.yml  _quarto.yml  abbreviations.qmd  board_statement.qmd  exec_statement.qmd  implement.qmd  index.aux  index.qmd  index.tex  partners.qmd  return.qmd  strengthen.qmd
afcenter25/_book/: abbreviations.html  about.html  board_statement.html  contact.html  exec_statement.html  implement.html  index.html  intro.html  partners.html  references.html  return.html  search.json  strengthen.html  summary.html
afcenter25/_book/site_libs/bootstrap/: bootstrap-5ebb5e90901858ba4a4181ef0d4788a8.min.css
