[project]
name = "af-center-report-25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bpython>=0.25",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.0",
    "pyyaml>=6.0.2",
    "quarto-cli>=1.6.42",
]
